[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "htransform"
version = "0.1.0"
description = "Python implementation of homogeneous transform operations"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-benchmark>=4",
]

[tool.setuptools.packages.find]
where = ["."]
