[package]
name = "htransform_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "htransform_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
nalgebra = "0.33"
ndarray = "0.15"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
